WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
89126
[chromium] Fix LayoutTests/platform/chromium/compositing/accelerated-drawing/svg-filters.html
https://bugs.webkit.org/show_bug.cgi?id=89126
Summary
[chromium] Fix LayoutTests/platform/chromium/compositing/accelerated-drawing/...
James Robinson
Reported
2012-06-14 13:55:08 PDT
[chromium] Fix LayoutTests/platform/chromium/compositing/accelerated-drawing/svg-filters.html
Attachments
Patch
(4.67 KB, patch)
2012-06-14 14:19 PDT
,
James Robinson
senorblanco
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
James Robinson
Comment 1
2012-06-14 14:19:09 PDT
Created
attachment 147651
[details]
Patch
Stephen White
Comment 2
2012-06-15 06:51:24 PDT
Comment on
attachment 147651
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=147651&action=review
Thanks for fixing this. r=me
> Source/WebCore/platform/graphics/skia/ImageBufferSkia.cpp:179 > + // If we're rendering into a deferred device, we need to make a deep copy of the source pixels because Skia does not > + // retain a reference to the actual pixels otherwise. We check if we're drawing into a deferred device by seeing if the
Nit: Technically, it's a deferred canvas, not a deferred device (SkPicture::beginRecording() returns an SkPictureRecord, which is a subclass of SkCanvas).
James Robinson
Comment 3
2012-06-15 13:08:04 PDT
Gotcha, I'll fix the comment before landing. Thanks!
James Robinson
Comment 4
2012-06-15 15:24:20 PDT
Committed
r120501
: <
http://trac.webkit.org/changeset/120501
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug